--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <h1>Victoria's Portfolio</h1>
     <h2>Hallo</h2>
+    <h3>I love Aryaditya Khatau</h3>
     <img src="./github_profilepic.jpg" />
 </html>
