--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-    <h1>Victoria's Portfolio</h1>
-    <img src="./github_profilepic.jpg" />
+    <h1>The Salmon's Portfolio</h1>
+    <img src="./salmon.jpeg" />
 </html>
