--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-    <h1>The Salmon's Portfolio</h1>
+    <h1>Interview with a Salmon</h1>
     <img src="./salmon.jpeg" />
+    <h2>What does the salmon think about foxes?</h2>
+    <h3>The salmon doesn't agree with their black socks, and also blames them for the tanking economy, but otherwise
+        considers them agrreable fellas.
+    </h3>
 </html>
