--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <img src="./salmon.jpeg" />
     <h2>What does the salmon think about foxes?</h2>
     <h3>The salmon doesn't agree with their black socks - and also blames them for the tanking economy - but otherwise
-        considers them agrreable fellas.
+        considers them agreeable fellas.
     </h3>
 </html>
